# capi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  clang_format_all.sh  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  run_formatter.py  run_tests.py  setup.py
.github/workflows/: build.yml  github-actions.yml
capi/cpp_libs/catch2/: catch.cpp
capi/cpp_libs/parallel_hashmap/: conanfile.py
capi/interfaces/: intersection_prechecker.py  intersection_prechecker_factory.py  path_interpolator.py  polygon_clipper.py
capi/interfaces/datastructures/: axis_aligned_box.py  polygon.py  polygon_spatial_index.py  polygon_spatial_index_factory.py
capi/interfaces/geometry/: polygon_bounding_box_computer.py
capi/interfaces/meridian_handling/: meridian_wrap_coord_transformer.py
capi/interfaces/shapefiles/: shapefile_reader.py
capi/src/: graph_generator.py  intersection_prechecker.py  intersection_prechecker_factory.py  path_interpolator.py  polygon_clipper.py
capi/src/datastructures/: axis_aligned_box.py  polygon.py  polygon_spatial_index.py  polygon_spatial_index_factory.py
capi/src/dtos/: coordinate.py
capi/src/geometry/: polygon_bounding_box_computer.py
capi/src/hypothesis_strategies/: axis_aligned_box.py  coordinate.py  polygon.py
capi/src/implementation/: graph_generator.py  graph_merger.py  intersection_prechecker.py  intersection_prechecker_factory.py  path_interpolator.py  polygon_clipper.py
capi/src/implementation/datastructures/: axis_aligned_box.py  graph_file_paths.py  polygon.py  polygon_spatial_index.py  polygon_spatial_index_factory.py
capi/src/implementation/dtos/: coordinate.py
capi/src/implementation/geometry/: polygon_bounding_box_computer.py
capi/src/implementation/meridian_handling/: meridian_wrap_coord_transformer.py
capi/src/implementation/pyvisgraph/: __init__.py  geometry.py  graph.py  priority_dict.py  shortest_path.py  vis_graph.py  visible_vertices.py
capi/src/implementation/shapefiles/: shapefile_reader.py
capi/src/implementation/visibility_graphs/: __init__.py  bindings.cpp  example.cpp
capi/src/implementation/visibility_graphs/code/: math.cpp  math.hpp
capi/src/implementation/visibility_graphs/code/constants/: constants.hpp
capi/src/implementation/visibility_graphs/code/coordinate_periodicity/: coordinate_periodicity.cpp  coordinate_periodicity.hpp
capi/src/implementation/visibility_graphs/code/datastructures/graph/: graph.cpp  graph.hpp
capi/src/implementation/visibility_graphs/code/dtos/: coordinate.hpp
capi/src/implementation/visibility_graphs/code/serialization/: graph_serializer.cpp  graph_serializer.hpp
capi/src/implementation/visibility_graphs/code/shortest_path/: shortest_path_computer.cpp  shortest_path_computer.hpp
capi/src/implementation/visibility_graphs/code/types/: coordinate.cpp  coordinate.hpp  polygon.cpp  polygon.hpp
capi/src/implementation/visibility_graphs/code/visgraph/: visgraph_generator.cpp  visgraph_generator.hpp  vistree_generator.cpp  vistree_generator.hpp
capi/src/interfaces/: graph_generator.py  graph_merger.py  intersection_prechecker.py  intersection_prechecker_factory.py  path_interpolator.py  polygon_clipper.py
capi/src/interfaces/datastructures/: axis_aligned_box.py  graph_file_paths.py  polygon.py  polygon_spatial_index.py  polygon_spatial_index_factory.py
capi/src/interfaces/geometry/: polygon_bounding_box_computer.py
capi/src/interfaces/meridian_handling/: meridian_wrap_coord_transformer.py
capi/src/interfaces/shapefiles/: shapefile_reader.py
capi/src/meridian_handling/: meridian_wrap_coord_transformer.py
capi/src/pyvisgraph/: __init__.py  geometry.py  graph.py  shortest_path.py  vis_graph.py  visible_vertices.py
capi/src/shapefiles/: shapefile_reader.py
capi/test/: test_graph_generator.py  test_graph_merger.py  test_intersection_prechecker.py  test_main.cpp  test_path_interpolator.py  test_polygon_clipper.py
capi/test/datastructures/: test_axis_aligned_box.py  test_polygon.py  test_polygon_spatial_index.py
capi/test/geometry/: test_polygon_bounding_box_computer.py
capi/test/meridian_handling/: test_meridian_wrap_coord_transformer.py
capi/test/pyvisgraph/: test_deploy.py  test_pvg.py
capi/test/shapefiles/: test_shapefile_reader.py
capi/test/test_files/: graph.pkl  meridian_graph.pkl  smaller.dbf  smaller.shp  smaller.shx  smaller_graph.pkl  smaller_meridian_graph.pkl  test_files_dir.py  very_small.dbf  very_small.shp  very_small.shx
capi/test/test_files/graph/: default  meridian
capi/test/test_files/smaller_graph/: default  meridian
capi/test/test_files/smaller_graph_range_1/: default  meridian
capi/test/test_files/smaller_graph_range_2/: default  meridian
capi/test/visibility_graphs/code/: test_math.cpp
capi/test/visibility_graphs/code/datastructures/graph/: test_graph.cpp
capi/test/visibility_graphs/code/datastructures/spatial_segment_index/: test_spatial_segment_index.cpp
capi/test/visibility_graphs/code/geom/angle_sorter/: test_angle_sorter.cpp
capi/test/visibility_graphs/code/geom/fast_arctan/: test_fast_arctan.cpp
capi/test/visibility_graphs/code/geom/left_turn/: test_left_turn.cpp
capi/test/visibility_graphs/code/geom/line_segment_orientation_to_ray/: test_line_segment_orientation_to_ray.cpp
capi/test/visibility_graphs/code/serialization/: test_graph_serializer.cpp
capi/test/visibility_graphs/code/shortest_path/: test_shortest_path_computer.cpp
capi/test/visibility_graphs/code/types/: test_coordinate.cpp  test_polygon.cpp
capi/test/visibility_graphs/code/types/coordinate/: test_coordinate.cpp
capi/test/visibility_graphs/code/types/line_segment/: test_line_segment.cpp
capi/test/visibility_graphs/code/types/polygon/: test_polygon.cpp
capi/test/visibility_graphs/code/types/polyline/: test_three_vertex_polyline.cpp
capi/test/visibility_graphs/code/visgraph/: test_visgraph_generator.cpp  test_vistree_generator.cpp
capi/test_common/: run_test_command.py
dev_environment/: Dockerfile  docker-compose.yml
(+28 files in other folders)
